tests/rascal/negative/name_errors/L1/7_assign_const.ob
MODULE Bla;

CONST
  x = 3;

BEGIN
  x := 1
END Bla.